--- a/test.ipynb
+++ b/test.ipynb
@@ -18,9 +18,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Names:<br>\n",
-        "Eli Sinai 325564243<br>\n",
-        "Daniel Meir Karl 318324563\n",
+        "This project was authored by Eli Sinai and Daniel Meir Karl.\n",
         "\n",
         "In this notebook, you can test the models we have trained.\n"
       ],
